Correct alignment for checkbox and text

--- a/Geo-SWITCHwayf/css/styles.css
+++ b/Geo-SWITCHwayf/css/styles.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  font: normal 10px arial,sans-serif;
+  Xfont: normal 10px arial,sans-serif;
 }
 #header-logo {
   display: block;
